// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedDiagnosisItem Snapshot Tests default rendering matches snapshot 1`] = `
<div>
  <div
    class="cds--css-grid"
  >
    <div
      class="cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
    >
      Diabetes Mellitus
      <a
        aria-disabled="false"
        class="cds--link"
        href="#"
      >
        Add as condition
      </a>
    </div>
    <div
      class="cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="diagnoses-certainty-dropdown-test-diagnosis-1"
      >
        <div
          class="cds--dropdown cds--autoalign cds--list-box"
          id="diagnoses-certainty-dropdown-test-diagnosis-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«r1o»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Diagnoses Certainty"
            class="cds--list-box__field"
            id="downshift-«r1o»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Confirmed"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Confirmed
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«r1o»-label"
            class="cds--list-box__menu"
            id="downshift-«r1o»-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectedDiagnosisItem Snapshot Tests disabled condition link matches snapshot 1`] = `
<div>
  <div
    class="cds--css-grid"
  >
    <div
      class="cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
    >
      Diabetes Mellitus
      <a
        aria-disabled="true"
        class="cds--link cds--link--disabled"
        role="link"
      >
        Added as a condition
      </a>
    </div>
    <div
      class="cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="diagnoses-certainty-dropdown-test-diagnosis-1"
      >
        <div
          class="cds--dropdown cds--autoalign cds--list-box"
          id="diagnoses-certainty-dropdown-test-diagnosis-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«r1u»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Diagnoses Certainty"
            class="cds--list-box__field"
            id="downshift-«r1u»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Confirmed"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Confirmed
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«r1u»-label"
            class="cds--list-box__menu"
            id="downshift-«r1u»-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectedDiagnosisItem Snapshot Tests rendering with null selectedCertainty matches snapshot 1`] = `
<div>
  <div
    class="cds--css-grid"
  >
    <div
      class="cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
    >
      Diabetes Mellitus
      <a
        aria-disabled="false"
        class="cds--link"
        href="#"
      >
        Add as condition
      </a>
    </div>
    <div
      class="cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="diagnoses-certainty-dropdown-test-diagnosis-1"
      >
        <div
          class="cds--dropdown cds--autoalign cds--list-box"
          id="diagnoses-certainty-dropdown-test-diagnosis-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«r1r»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Diagnoses Certainty"
            class="cds--list-box__field"
            id="downshift-«r1r»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Select Certainty"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Select Certainty
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«r1r»-label"
            class="cds--list-box__menu"
            id="downshift-«r1r»-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
